// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleResult RuleResult.extend Should deep merge children keys 1`] = `
RuleResult {
  "children": Object {
    "a": RuleResult {
      "children": Object {
        "1": RuleResult {
          "children": Object {
            "x": RuleResult {
              "failed": true,
              "hasErrors": true,
            },
          },
          "failed": true,
          "hasErrors": true,
          "hasWarnings": false,
        },
      },
      "failed": true,
      "hasErrors": true,
      "hasWarnings": false,
    },
  },
  "failed": true,
  "hasErrors": true,
  "hasWarnings": false,
}
`;

exports[`RuleResult RuleResult.extend Should merge children keys 1`] = `
RuleResult {
  "children": Object {
    "a": RuleResult {
      "failed": false,
      "hasErrors": false,
    },
    "b": RuleResult {
      "failed": false,
      "hasErrors": false,
    },
    "c": RuleResult {
      "failed": false,
      "hasErrors": false,
    },
  },
  "failed": false,
  "hasErrors": false,
  "hasWarnings": false,
}
`;

exports[`RuleResult RuleResult.extend Should use most severe failed value 1`] = `
RuleResult {
  "children": Object {
    "example": RuleResult {
      "failed": true,
      "hasErrors": true,
    },
  },
  "failed": true,
  "hasErrors": true,
  "hasWarnings": false,
}
`;
